--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "build": "next build && next export ",
     "start": "next start",
     "lint": "next lint",
-    "clear": "rm -rf node_modules package-lock.json .next out"
+    "clear": "rm -rf node_modules package-lock.json .next out",
+    "optimize": "node scripts/optimize.js",
+    "analyze": "ANALYZE=true next build",
+    "verify-jsx": "node scripts/verify-jsx.js"
   },
   "dependencies": {
     "@formspree/react": "^2.5.4",
-    "@next/font": "13.4.19",
     "@rainbow-me/rainbowkit": "^2.1.7",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.3.0",
+    "@react-three/drei": "^9.88.13",
+    "@react-three/fiber": "^8.15.11",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^5.59.0",
+    "@walletconnect/modal": "^2.6.2",
     "axios": "^1.12.2",
     "ethers": "^5.7.2",
-    "framer-motion": "^12.9.2",
+    "framer-motion": "^11.11.1",
     "lucide-react": "^0.545.0",
     "next": "13.4.19",
     "react": "18.2.0",
@@ -31,10 +34,10 @@
     "three": "^0.180.0",
     "tweetnacl": "^1.0.3",
     "viem": "^2.21.19",
-    "wagmi": "^2.12.17",
-    "web3modal": "^1.9.12"
+    "wagmi": "^2.12.17"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.4",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^24.0.3",
     "autoprefixer": "^10.4.14",
