--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,19 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+node_modules/
+.next/
+out/
+dist/
+build/
+coverage/
+.env
+.env.local
+.env.*.local
 .DS_Store
-*.pem
-
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-# local env files (prevent accidental commits of env/secrets)
-.env
-.env.*
-.env.local
-web3/.env
-web3/.env.*
-.secret
-.private
-
-
-# vercel
-.vercel
-
-node_modules
-
-coverage
-coverage.json
-typechain
-typechain-types
-
-# Hardhat files
-cache
-
-
+.vscode/
+.idea/
+/.cache
+/.parcel-cache
+/.turbo
+*.log
