--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "eslint-config-next": "13.4.19",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
