fix(build): replace non-existent FiWallet icon and switch Vercel to static-build to serve out/

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
-  "framework": "nextjs",
+  "builds": [
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "out" } }
+  ],
   "buildCommand": "npm run build",
-  "outputDirectory": "out",
   "cleanUrls": true
 }
